[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-mcp-mq-template"
version = "0.0.0"
description = "📮 A message queue component plugin for strong Slack MCP server."
authors = [{ name = "Chisanan232", email = "chi10211201@cycu.org.tw" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "slack",
    "mcp",
    "mcp-server",
    "slack-mcp",
    "slack-mcp-server",
    "slack-event",
    "slack-event-handler",
    "message-queue",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
#    "Programming Language :: Python :: 3.14",  # TODO: Because of PyO3's maximum supported version (3.13)
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Chisanan232/Slack-MCP-Server-Backend-MQ-Template"
Repository = "https://github.com/Chisanan232/Slack-MCP-Server-Backend-MQ-Template"
Documentation = "https://chisanan232.github.io/slack-mcp-server-template/"
Changelog = "https://chisanan232.github.io/slack-mcp-server-template/docs/next/changelog"
"Project Management" = "https://app.clickup.com/9018752317/v/f/90185744047/90184991515"

[project.entry-points."slack_mcp.backends.queue"]
mq_name = "slack_mcp.backends.queue.template:MessageQueueBackend"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "pytest-cov>=5.0.0,<8",
    "coverage~=7.10",
    "pytest-rerunfailures>=14.0,<17",
    "aiohttp>=3.12.13",
    "pytest-asyncio>=0.23.0,<2",
    "python-dotenv>=1.0.1,<2",
]
pre-commit-ci = [
    "pre-commit>=3.5.0,<5",
    "pylint>=3.1.0,<4",
    "mypy>=1.2.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "pre-commit-ci",
]

[tool.hatch.build.targets.sdist]
include = ["slack_mcp/"]
packages = ["slack_mcp/backends/queue"]
#artifacts = ["slack_mcp/py.typed"]

[tool.hatch.build.targets.wheel]
include = ["slack_mcp/"]
packages = ["slack_mcp/backends/queue"]
#artifacts = ["slack_mcp/py.typed"]
